--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,52 @@ email: gsm4526@naver.com
 url: https://Nephrite21.github.io
 
 githuburl: https://github.com/Nephrite21
+blogurl: https://nephrite21.tistory.com/1
+
+#about page introduction
+introduction:  
+  greeting: Hello!, I'm Nephrite21!
+  introductionAboutMe:  I usually play and make games! I'm interested in Unity, Unreal engine!
+
+
+# 1 icon = 1 detail = 1 progression bar
+# unity-csharp, unreal-cpp, html-css-js
+skillImageIcon:  
+  - src: /assets/img/unity-csharp.png
+  - src: /assets/img/unreal-cpp.png
+  - src: /assets/img/html-css-js.png
+
+skillDetail:
+  - skillName: Unity - C#
+    skillDetail: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget risus rhoncus, lacinia nibh vitae, bibendum dui. Suspendisse vel neque vel felis placerat elementum. In mollis ipsum imperdiet, rhoncus nisi vitae, interdum justo. Fusce non bibendum mauris, ac fringilla mauris. Vivamus pharetra neque et nisi sollicitudin eleifend vitae eget purus. Nunc semper mauris eu est hendrerit laoreet. Nulla ipsum ligula, pretium nec mi ac, tempus egestas est. Donec a velit nisi. In ut ultricies lacus. Praesent vel leo tortor. Aenean efficitur, augue sit amet scelerisque condimentum, eros sapien mattis dui, vitae molestie erat eros cursus enim.
+    previousWork:
+  - skillName: Unreal - C++
+    skillDetail: Curabitur lacinia lectus in nunc pellentesque, quis sollicitudin mauris tempor. Vestibulum tempor dui enim, sit amet malesuada elit bibendum vitae. Nam tincidunt, nunc eu bibendum lobortis, lorem metus pulvinar tellus, in euismod libero purus sed nulla. Phasellus massa ante, laoreet sed ornare quis, semper sed enim. Aenean fermentum facilisis fermentum. Morbi consequat molestie lectus, et accumsan risus aliquam ut. Nulla tempor ligula nec nisl cursus, sed molestie nulla eleifend. Phasellus massa dui, ultrices id lectus commodo, congue pulvinar risus. Morbi facilisis nisl lectus, et sollicitudin nisi ultricies ornare. Sed dapibus maximus odio et iaculis. Nullam leo sem, rhoncus porta ultrices at, semper maximus neque.
+    previousWork:
+  - skillName: Html - Css - JavaScript
+    skillDetail: Nulla facilisi. Integer ac massa in elit condimentum viverra. Suspendisse sodales nulla sagittis congue vulputate. Mauris ornare, libero id suscipit dignissim, eros ipsum scelerisque nisl, in tincidunt urna sapien eu diam. Vestibulum auctor, velit quis pretium vulputate, quam nunc vehicula eros, nec accumsan felis odio quis ante. Nulla dui augue, consequat vitae tellus viverra, aliquam accumsan ligula. Etiam aliquam sed purus non dapibus. Curabitur et dictum arcu, et tincidunt nunc. Praesent commodo finibus dui ac luctus. Quisque quis nulla pretium, interdum libero ac, molestie ligula. Fusce nunc nulla, eleifend id aliquet ut, dapibus quis eros.
+    previousWork:
+
+# proficiency : novice/advanced-beginner/competent/proficient/expert -> 10/30/50/70/90
+proficiencyProgressionBar:
+  - proficiency: novice
+    proficiencyGrade: 10
+    proficiencyDescription: have experience in making simple simulation and prototype game.
+  - proficiency: novice
+    proficiencyGrade: 0
+    proficiencyDescription: have no experience in making something with unreal engine
+  - proficiency: novice
+    proficiencyGrade: 10
+    proficiencyDescription: novice
+
+# interest : very-low-interest/low-interest/some-interest/high-interest/very-high-interest -> 10/30/50/70/90  
+interestProgressionBar:
+  - interest: some-interest
+    interestGrade: 50
+    interestDescription: interested in making games with unity
+  - interest: high-interest
+    interestGrade: 70
+    interestDescription: interested in high quallity effect/graphic/modelling using unreal engine.
+  - interest: low-interest
+    interestGrade: 30
+    interestDescription: was interested in making this homepage on my own, but I am not interested in learning more about it
