Delete Progression Bar
It is useless.

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ introduction:
   introductionAboutMe:  I usually play and make games! I'm interested in Unity, Unreal engine! Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vestibulum sapien pulvinar blandit imperdiet.
 
 
-# 1 icon = 1 detail = 1 progression bar
+# 1 icon = 1 detail
 # unity-csharp, unreal-cpp, html-css-js
 # if you add more component, change var indexNum at "about.js" to Number of contents
 skillImageIcon:  
@@ -32,26 +32,3 @@ skillDetail:
     skillDetail: Nulla facilisi. Integer ac massa in elit condimentum viverra. Suspendisse sodales nulla sagittis congue vulputate. Mauris ornare, libero id suscipit dignissim, eros ipsum scelerisque nisl, in tincidunt urna sapien eu diam. Vestibulum auctor, velit quis pretium vulputate, quam nunc vehicula eros, nec accumsan felis odio quis ante. Nulla dui augue, consequat vitae tellus viverra, aliquam accumsan ligula. Etiam aliquam sed purus non dapibus. Curabitur et dictum arcu, et tincidunt nunc. Praesent commodo finibus dui ac luctus. Quisque quis nulla pretium, interdum libero ac, molestie ligula. Fusce nunc nulla, eleifend id aliquet ut, dapibus quis eros.
     previousWork:
 
-# proficiency : novice/advanced-beginner/competent/proficient/expert -> 10/30/50/70/90
-proficiencyProgressionBar:
-  - proficiency: novice
-    proficiencyGrade: 10%
-    proficiencyDescription: have experience in making simple simulation and prototype game.
-  - proficiency: novice
-    proficiencyGrade: 0%
-    proficiencyDescription: have no experience in making something with unreal engine
-  - proficiency: novice
-    proficiencyGrade: 10%
-    proficiencyDescription: built this homepage with Jekyll/HTML/CSS/JS!
-
-# interest : very-low-interest/low-interest/some-interest/high-interest/very-high-interest -> 10/30/50/70/90  
-interestProgressionBar:
-  - interest: some-interest
-    interestGrade: 50%
-    interestDescription: interested in making games with unity
-  - interest: high-interest
-    interestGrade: 70%
-    interestDescription: interested in high quallity effect/graphic/modelling using unreal engine.
-  - interest: low-interest
-    interestGrade: 30%
-    interestDescription: was interested in making this homepage on my own, but I am not interested in learning more about it
