--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,48 @@ skillImageIcon:
 
 skillDetail:
   - skillName: Unity - C#
-    skillDetail: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget risus rhoncus, lacinia nibh vitae, bibendum dui. Suspendisse vel neque vel felis placerat elementum. In mollis ipsum imperdiet, rhoncus nisi vitae, interdum justo. Fusce non bibendum mauris, ac fringilla mauris. Vivamus pharetra neque et nisi sollicitudin eleifend vitae eget purus. Nunc semper mauris eu est hendrerit laoreet. Nulla ipsum ligula, pretium nec mi ac, tempus egestas est. Donec a velit nisi. In ut ultricies lacus. Praesent vel leo tortor. Aenean efficitur, augue sit amet scelerisque condimentum, eros sapien mattis dui, vitae molestie erat eros cursus enim.
+    skillDetail: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget risus rhoncus, lacinia nibh vitae, bibendum dui. Suspendisse vel neque vel felis placerat elementum. In mollis ipsum imperdiet, rhoncus nisi vitae, interdum justo. Fusce non bibendum mauris, ac fringilla mauris. Vivamus pharetra neque et nisi sollicitudin eleifend vitae eget purus. 
     previousWork:
+      - title: asd
+        link: https://www.naver.com/
+        description: asd is a goood website
+      - title: qwe
+        link: https://www.naver.com/
+        description: qwe is a goood website
+      - title: zxc
+        link: https://www.naver.com/
+        description: zxc is a goood website
   - skillName: Unreal - C++
-    skillDetail: Curabitur lacinia lectus in nunc pellentesque, quis sollicitudin mauris tempor. Vestibulum tempor dui enim, sit amet malesuada elit bibendum vitae. Nam tincidunt, nunc eu bibendum lobortis, lorem metus pulvinar tellus, in euismod libero purus sed nulla. Phasellus massa ante, laoreet sed ornare quis, semper sed enim. Aenean fermentum facilisis fermentum. Morbi consequat molestie lectus, et accumsan risus aliquam ut. Nulla tempor ligula nec nisl cursus, sed molestie nulla eleifend. Phasellus massa dui, ultrices id lectus commodo, congue pulvinar risus. Morbi facilisis nisl lectus, et sollicitudin nisi ultricies ornare. Sed dapibus maximus odio et iaculis. Nullam leo sem, rhoncus porta ultrices at, semper maximus neque.
+    skillDetail: Curabitur lacinia lectus in nunc pellentesque, quis sollicitudin mauris tempor. Vestibulum tempor dui enim, sit amet malesuada elit bibendum vitae. Nam tincidunt, nunc eu bibendum lobortis, lorem metus pulvinar tellus, in euismod libero purus sed nulla. Phasellus massa ante, laoreet sed ornare quis, semper sed enim. Aenean fermentum facilisis fermentum. 
     previousWork:
+      - title: zxc
+        link: https://www.naver.com/
+        description: zxc is a goood website
+      - title: asd
+        link: https://www.naver.com/
+        description: asd is a goood website
+      - title: qwe
+        link: https://www.naver.com/
+        description: qwe is a goood website
   - skillName: Html - Css - JavaScript
-    skillDetail: Nulla facilisi. Integer ac massa in elit condimentum viverra. Suspendisse sodales nulla sagittis congue vulputate. Mauris ornare, libero id suscipit dignissim, eros ipsum scelerisque nisl, in tincidunt urna sapien eu diam. Vestibulum auctor, velit quis pretium vulputate, quam nunc vehicula eros, nec accumsan felis odio quis ante. Nulla dui augue, consequat vitae tellus viverra, aliquam accumsan ligula. Etiam aliquam sed purus non dapibus. Curabitur et dictum arcu, et tincidunt nunc. Praesent commodo finibus dui ac luctus. Quisque quis nulla pretium, interdum libero ac, molestie ligula. Fusce nunc nulla, eleifend id aliquet ut, dapibus quis eros.
+    skillDetail: Nulla facilisi. Integer ac massa in elit condimentum viverra. Suspendisse sodales nulla sagittis congue vulputate. Mauris ornare, libero id suscipit dignissim, eros ipsum scelerisque nisl, in tincidunt urna sapien eu diam. Vestibulum auctor, velit quis pretium vulputate, quam nunc vehicula eros, nec accumsan felis odio quis ante. 
     previousWork:
+      - title: qwe
+        link: https://www.naver.com/
+        description: qwe is a goood website
+      - title: zxc
+        link: https://www.naver.com/
+        description: zxc is a goood website
+      - title: asd
+        link: https://www.naver.com/
+        description: asd is a goood website
 
+Works:
+  - img: /assets/img/game.png
+    link: https://www.naver.com/
+  - img: /assets/img/game.png
+    link: https://www.naver.com/
+  - img: /assets/img/game.png
+    link: https://www.naver.com/
+  - img: /assets/img/game.png
+    link: https://www.naver.com/
